[metadata]
name = ecgem
description = Enzyme Constraint genome-scale models
keywords = 
  python
  metabolic-models 
  bioinformatics 
  systems-biology
long_description = file: README.md
version = 0.0.1

[options]
zip_safe = True
install_requires =
    cobra~=0.20.0
    pandas~=1.1.5
packages = find:

[options.extras_require]
dev =
  black
  isort
  tox
  pytest

[flake8]
max-line-length = 88
exclude = __init__.py
