[metadata]
name = geckopy
description = Enzyme Constraint genome-scale models
keywords = 
  python
  metabolic-models 
  bioinformatics 
  systems-biology
long_description = file: README.md
version = 0.0.1

[options]
zip_safe = True
install_requires =
    cobra~=0.20.0
    pandas~=1.1.5
packages = find:

[options.extras_require]
dev =
  black
  isort
  pytest
  flake8
  flake8-docstrings
  flake8-bugbear

[flake8]
max-line-length = 89
exclude = __init__.py
extend-ignore = 
# See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[isort]
line_length = 89
indent = 4
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
lines_after_imports = 2
known_first_party = geckopy
